# StableEMRIFisher

./: .gitignore  .readthedocs.yaml  DirtyEccFisher_Example.ipynb  EMRI_Params.py  FM_basic_run.py  FM_case_1.py  FM_run.py  FisherCalculator.ipynb  FisherCalculator.py  FisherCalculator_Example.ipynb  Fisherinator_14DreparamFTS.ipynb  LICENSE  README.md  StableEMRIDerivative_FEW2April.ipynb  StableEMRIFisher.py  StableEMRIFisher_Example.ipynb  check_derivs.py  check_gpu.py  deriv_angles.py  fisher.py  fisher_dirtyecc.py  noise.py  psd_utils.py  pyproject.toml  pytest.ini  sef_newderivs_noresponse.ipynb  sef_newderivs_response-fullFM.ipynb  sef_newderivs_response.ipynb  stableemriderivative.py  utils.py
FastEMRIWaveforms/src/: Inspiral.cc
Figures_Of_Merit/: Fish_Matrix.py
Figures_Of_Merit/FM_file/: stable_deltas.txt
Fisher_Analysis/: StableEMRIFisher_DirtyEcc.ipynb
Fisher_Analysis/TestRun_SubEcc/: Fisher.txt
MCMC_FM_Data/: Process_Results.ipynb
MCMC_FM_Data/PE_samples/Case_1_EMRI_prograde/: README.md  prograde_EMRI_case_1_1eneg5.h5
MCMC_FM_Data/PE_samples/Case_2_extreme_EMRI_prograde/: README.md
MCMC_FM_Data/fisher_matrices/case_1/: Fisher.h5  stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_1_1eneg2_modes/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_2/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_3/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_4/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_5/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/case_6/: stable_deltas.txt
MCMC_FM_Data/fisher_matrices/plunging_EMRI/: stable_deltas.txt
MCMC_FM_Data/mcmc_data/: case_1_few.h5  paper_PE_plots.ipynb
TestRun/: Fisher.npy  Fisher.txt  stable_deltas.txt
TestRun_SubEcc/: Fisher.txt  stable_deltas.txt
docs/: Makefile  citation.rst  conf.py  contribution.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  validation.rst
docs/_static/: custom.css
docs/api/: fisher.rst  index.rst  noise.rst  plot.rst  utils.rst
docs/tutorials/: basic_usage.rst  case_1_fisher_matrix.ipynb  custom_waveforms.rst  gpu_acceleration.rst  index.rst  parameter_estimation.rst  stability_analysis.rst
docs/validation/: check_fisher_against_mcmc.ipynb  check_fisher_against_mcmc_executed.ipynb  update_validation_notebook.sh  validation.rst
examples/: StableEMRIDerivative_FEW2April.ipynb  basic_usage_no_stability_check.py  basic_usage_stability_check.py
examples/basic_usage_nostability_outdir/: stable_deltas.txt
examples/basic_usage_stability_outdir/: stable_deltas.txt
examples/notebooks/: SEF_inner_product_example.ipynb  StableEMRIDerivative_FEW2April.ipynb  sef_newderivs_noresponse.ipynb  sef_newderivs_response-fullFM.ipynb  sef_newderivs_response.ipynb  selected_modes.ipynb
fisher/: fisher.py
for_docs/: FM_case_1.py  FM_w_response.py  check_derivs.py  derivative_computation.ipynb  fisher_with_response.ipynb  simple_FM.py  simple_fisher_matrix.ipynb
stableemrifisher/: __init__.py  noise.py  plot.py  utils.py
stableemrifisher/deriv_utils/: antenna_derivs.py  deriv_angles.py
stableemrifisher/fisher/: __init__.py  derivatives.py  fisher.py  new_derivs.py  stablederivative.py
tests/: README.md  test_stableemriderivative.py
validation/: compare_with_mcmc.py  derivatives.ipynb
