[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stableemrifisher", "stableemrifisher.fisher"]

[project]
name = "stableemrifisher"
version = "2.0.1"
requires-python = ">=3.9"
authors = [
  {name = "Shubham Kejriwal", email = "shubhamkejriwal@u.nus.edu"},
  {name = "Ollie Burke", email = "ollie.burke@l2it.in2p3.fr"},
  {name = "Christian Chapman-Bird", email = "c.chapmanbird@gmail.com"},
]
description = "Stable Fisher matrix computation for EMRI gravitational wave parameter estimation"
readme = "README.md"
license = {text = "MIT"}
keywords = ["gravitational waves", "fisher matrix", "parameter estimation", "EMRI", "LISA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "fastemriwaveforms==2.0.0",
]

[project.optional-dependencies]
# CPU-only installation (default, works on all platforms)
cpu = []

# GPU support - platform dependent  
# Note: GPU support primarily for Linux x86_64 systems with NVIDIA GPUs
gpu = [
    "cupy>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
]

# Specific CUDA toolkit versions (Linux x86_64 only)
# Note: These will install CUDA-specific versions of FastEMRIWaveforms
cuda11 = [
    "cupy-cuda11x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
    "fastemriwaveforms[cuda11]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
]
cuda12 = [
    "cupy-cuda12x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
    "fastemriwaveforms[cuda12]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0.0",
    "sphinx_rtd_theme>=1.0.0",
    "nbsphinx>=0.8.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-copybutton>=0.5.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

# Development dependencies
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-xdist>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/perturber/StableEMRIFisher"
Documentation = "https://stableemrifisher.readthedocs.io"
Repository = "https://github.com/perturber/StableEMRIFisher"
Issues = "https://github.com/perturber/StableEMRIFisher/issues"

[tool.setuptools.package-data]
stableemrifisher = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["stableemrifisher"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
